# usrsctp

./: .gitignore  CMakeLists.txt
programs/: CMakeLists.txt
usrsctplib/: CMakeLists.txt  ifaddrs.c  user_environment.h  user_ip6_var.h  user_recv_thread.c  user_socket.c  usrsctp.h.in  usrsctpConfig.cmake
usrsctplib/netinet/: sctp.h  sctp_input.c  sctp_os_userspace.h  sctp_output.c  sctp_uio.h  sctp_userspace.c  sctp_usrreq.c
